tracker-extract-oasis.c: Improve parsing of .odt files

This fixes an issue where nested <text:span> tags in a .odt file would
confuse the extractor and result in bad data in the nfo:plainTextContent
field.

See https://gitlab.gnome.org/GNOME/tracker/issues/120 and
https://gitlab.gnome.org/GNOME/tracker/issues/109.